--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html>
     <head>
+        <link rel="stylesheet" href="../../public/stylesheets/normalize.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300italix,700italic,700,300">
+        <link rel="stylesheet" href="../../public/stylesheets/lib.css">
         <title>Finstagram</title>
     </head>
     <body>
@@ -8,19 +11,20 @@
             <h1>Finstagram</h1>
         </header>
         <main role="main">
-            <article>
-                <div>
+            <article class="post">
+                <div class="user-info">
                     <img src="http://naserca.com/images/sharky_j.jpg" alt="sharky_j">
                     <h2>sharky_j</h2>
                     <h3>15 minutes ago</h3>
                 </div>
-                <a href="#">
+                <a class="photo" href="#">
                     <img src="http://naserca.com/images/shark.png" alt="post from sharky_j"
                 </a>
-                <div> 0 likes
-                <span>0 comments</span>
+                <div class="actions">
+                     0 likes
+                <span class="comment-count">0 comments</span>
                 </div>
-                <ul>
+                <ul class="comments">
                     <li>
                         <p>sharky_j:Out for the long weekend...too embarassed to show you guys the beach bod</p>
                     </li>
