--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -11,3 +11,12 @@ main {
     background-color: white;
     padding: 16px;
 }
+
+.post {
+    margin-bottom: 48px;
+}
+
+.post .user-info img {
+    border-radius: 50%;
+}
+}
