--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,6 +1,15 @@
 <!doctype html>
 <header>
     <h1>Finstagram</h1>
+    <div class="login-info">
+        <% if current_user %>
+            <%= current_user.username %>
+            <a /h>ref="/logout">Logout</a>
+        <% else %>
+            <a href="/login">Login</a>
+            <a href="/signup">Signup</a>
+        <% end %>
+    </div>
 </header>
 <main role="main">
     <% @posts.each do |post| %>    
