--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -6,7 +6,22 @@
         <link rel="stylesheet" href="/stylesheets/app.css">
         <title>Finstagram</title>
     </head>
-    <body>
-        <%= yield %>
+        <body>
+            <h1>
+                <a href="/">Finstigram</>
+            </h1>
+            <div class="login-info">
+                <% if current_user %>
+                    <%= current_user.username %>
+                    <a href="/logout">Logout</a>
+                <% else %>
+                    <a href="/login">Login</a>
+                    <a href="/signup">Signup</a>
+                <% end %>
+            </div>
+        </header>
+        <main role="main">
+            <%= yield %>
+        </main>
     </body>
 </html>
