--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -5,7 +5,7 @@
 </ul>
 
 
-<form method="/signup" action="POST">
+<form method="POST" action="/signup">
     <div class="form-group">
         <label for="email"l>Email</label>   
         <input type="email" id="email" name="email" value="<%= @user.email %>">
