--- a/app/views/posts/new.erb
+++ b/app/views/posts/new.erb
@@ -1,3 +1,9 @@
+<h2>New Post</h2>
+
+<h2>Login</h2>
+
+<h2>Signup</h2>
+
 <ul class="errors">
     <% @post.errors.full_messages.each do |message| %>
         <li><%= message %></li>
