--- a/app/views/shared/post.erb
+++ b/app/views/shared/post.erb
@@ -8,9 +8,10 @@
        <img src="<%= post.photo_url %>" alt="post from <%= post.user.username %>">
     </a>
     <div class="actions">
-       <%= post.like_count %> likes
+       <%= erb(:"shared/likes", { locals: { post:post }}) %>
        <span class="comment-count"><%= post.comment_count %> comment</span>
     </div>
+       <%= erb(:"shared/new_comment", { locals: { post: post}}) %>
        <ul class="comments">
             <% post.comments.each do |comment| %>
                 <li>
@@ -21,4 +22,8 @@
             <% end %>
         </ul>
     </article>
+    
+<% if current_user && allow_new_comment %>
+    <%= erb(:"shared/new_comment", { locals: { post: post }}) %>
+<% end %>
 
